--- a/config/Dockerfile
+++ b/config/Dockerfile
@@ -8,6 +8,6 @@ FROM rails:onbuild
 
 MAINTAINER Daniel Sont "dan.sont@gmail.com"
 
-RUN cp config/database-env.yml config/database.yml
+RUN echo "Please migrate your DB"
 
 EXPOSE 3000
